# el-guacal

./: .gitignore  .release-please-manifest.json  Brewfile  README.md  docker-compose.yaml  package.json  pnpm-lock.yaml  readme.md  release-please-config.json
.github/: pull_request_template.mc
.github/ISSUE_TEMPLATE/: bug.md
.github/actions/ci-validation/: action.yaml
.github/actions/prepare/: action.yaml
.github/scripts/: detect-changes.mjs
.github/workflows/: daily-export.yaml  deploy-server.yaml  deploy-web.yaml  deploy.yaml  draft-release.yaml  pr.yaml  release.yaml
.moon/: workspace.yml
apps/server/: .env.example  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  diesel.toml  moon.yml  schema.graphql
apps/server/migrations/: 20251102000000_initial_schema.sql  20260301171350_more_products.sql  20260413000000_contribution_moderation.sql
apps/server/migrations/2025-11-02-110252-0000_create_stores_products/: down.sql  up.sql
apps/server/src/: config.rs  lib.rs  main.rs  rate_limit.rs  schema.rs  state.rs  telemetry.rs
apps/server/src/api/: export.rs  mod.rs  queries.rs
apps/server/src/api/commands/: mod.rs  proposal.rs  store.rs  user.rs
apps/server/src/api/queries/: mod.rs  product.rs  proposal.rs  store.rs
apps/server/src/auth/: mod.rs
apps/server/src/model/: location.rs  mod.rs  product.rs  proposal.rs  store.rs  user.rs
apps/server/tests/: api_tests.rs
apps/web/: .env.example  .firebaserc  CHANGELOG.md  README.md  biome.json  firebase.json  index.html  moon.yml  package.json  pnpm-lock.yaml  react-router.config.ts  tsconfig.app.json  tsconfig.json  vite.config.ts  vitest.config.ts
apps/web/app/: i18n.ts  root.tsx  routes.ts  vite-env.d.ts
apps/web/app/components/: DeleteConfirmationDialog.tsx
apps/web/app/graphql/: guacal-api-client.ts  types.ts
apps/web/app/i18n/: config.ts  date.ts  index.ts  locale.ts
apps/web/app/locales/: i18n.ts
apps/web/app/routes/: $.tsx  _index.tsx  _locale._index.tsx  _locale.about.tsx  _locale.auth.tsx  _locale.blog.$slug.tsx  _locale.blog._index.tsx  _locale.dataset.tsx  _locale.my-store-proposals.tsx  _locale.my-submissions.tsx  _locale.privacy-policy.tsx  _locale.stores.edit.tsx  _locale.stores.new.tsx  _locale.tsx  about.tsx  auth.login.tsx  auth.module.scss  auth.signup.tsx  auth.tsx  dataset.tsx  index.module.scss  locale-layout.tsx  my-store-proposals.module.scss  sitemap[.]xml.ts  stores.edit.tsx  stores.new.tsx
apps/web/config/: codegen.ts  vitest.config.ts
apps/web/public/: robots.txt
apps/web/src/: App.test.tsx  app.tsx  main.ts  main.tsx
apps/web/styles/: main.css
docs/: auth-flow.md  design-system.md
docs/adrs/: 0001-record-architecture-decision-records.md  0002-monorepo-management-with-moon.md  0003-backend-language-and-web-framework.md  0004-api-communication-protocol.md  0005-database-selection.md  0006-database-access-and-migrations.md  0007-frontend-framework-and-deployment-strategy.md  0008-frontend-state-management-and-data-fetching.md  0009-authentication-and-client-side-hosting.md  0010-infrastructure-as-code.md  0011-observability-and-structured-logging.md  0012-frontend-form-management-and-validation.md  0013-continuous-integration-and-deployment.md  0014-visual-design-system-and-design-tokens.md  0015-logo-and-brand-mark.md
docs/design/: contribution-and-moderation.md  jules-prompt-contribution-moderation.md
docs/design/mockups/: 01-tokens-gallery.html  02-map-home.html  AAA-audit.md  tokens.css
docs/product/: brief.md
docs/runbooks/: moderation-via-graphiql.md
docs/superpowers/plans/: 2026-04-13-contribution-moderation.md
infrastructure/: Brewfile  README.md  main.tf  outputs.tf  providers.tf  readme.md  terraform.tfvars.example  variables.tf
verification/: verify_auth.py
web/: biome.json  moon.yml
(+137 files in other folders)
