[package]
name = "server"
version = "0.4.0"
edition = "2024"

[dependencies]
async-graphql = { version = "7.2.1", features = [
    "chrono",
    "uuid",
    "tracing",
    "log",
] }
async-graphql-axum = "7.2.1"
axum = "0.8.8"
chrono = { version = "0.4.44", features = ["clock"] }
tokio = { version = "1.49.0", features = ["full"] }
uuid = { version = "1.21.0", features = ["v4", "serde"] }
sqlx = { version = "0.8.6", features = [
    "runtime-tokio-native-tls",
    "postgres",
    "uuid",
    "chrono",
    "macros",
] }
dotenvy = "0.15"
serde = { version = "1.0.228", features = ["derive"] }
anyhow = "1.0.102"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tower-http = { version = "0.6", features = ["trace", "cors"] }
jsonwebtoken = "10.3.0"
reqwest = { version = "0.13.2", features = ["json", "rustls"] }


[dev-dependencies]
tower = { version = "0.5.3", features = ["util"] }
serde_json = "1.0"
http = "1.4.0"

[lints.clippy]
pedantic = "warn"
nursery = "warn"

[lints.rust]
unsafe_code = "forbid"
