[package]
name = "server"
version = "0.9.0"
edition = "2024"
default-run = "server"

[dependencies]
async-graphql = { version = "7.2.1", features = [
    "chrono",
    "uuid",
    "tracing",
    "log",
] }
async-graphql-axum = "7.2.1"
axum = "0.8.8"
chrono = { version = "0.4.44", features = ["clock"] }
tokio = { version = "1.50.0", features = ["full"] }
uuid = { version = "1.23.0", features = ["v4", "serde"] }
sqlx = { version = "0.8.6", features = [
    "runtime-tokio-native-tls",
    "postgres",
    "uuid",
    "chrono",
    "macros",
] }
dotenvy = "0.15"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
csv = "1.4.0"
zip = { version = "8.5.0", default-features = false, features = ["deflate"] }
anyhow = "1.0.102"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tower-http = { version = "0.6", features = ["trace", "cors"] }
jsonwebtoken = { version = "10.3.0", features = ["aws_lc_rs"] }
reqwest = { version = "0.13.2", features = ["json", "rustls"] }


[dev-dependencies]
tower = { version = "0.5.3", features = ["util"] }
http = "1.4.0"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
useless_let_if_seq = "allow"

[lints.rust]
unsafe_code = "forbid"
